<resources>
    <string name="app_name">Against_Pandemic</string>
    <string name="baseURL">http://192.168.0.108:3000</string>

    <string name="reasons_title">Select the appropriate reasons</string>
    <string name="conditions_title">Range of monthly income</string>
    <string name="ok_label">OK</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">Clear all</string>
    <string name="positiveTitle01">Coronavirus: Do you have a COVID plan ready?</string>
    <string name="positiveTitle02">Approaching a doctor for help and  medical advise</string>
    <string name="positiveDetails01">Received a positive COVID diagnosis? Getting a COVID test is not the best piece of news to receive right now. However, once you get the news, it is important to decide the next course of action. While over 80% of cases are mild or moderate in nature, not every patient requires hospitalization. Knowing what to do, when to seek help can fasten your recovery time and help you get back on your feet better. Hence, it is important to have a COVID plan ready.</string>
    <string name="positiveDetails02">Aliquet lacus, pellentesque iaculis etiam porta. Porta lobortis mauris euismod nullam quis est vitae. Sed pharetra ultricies pellentesque risus ipsum. Quis egestas tortor sed ligula lectus at neque turpis morbi. Sed cursus venenatis vitae, faucibus ornare egestas eu. Vitae libero massa imperdiet etiam cras. Morbi sit urna iaculis pellentesque leo nec in. Sed euismod diam condimentum eu morbi turpis</string>
    <string name="helpTitle">Get help from your community.</string>

    <string name="negativeTitle">Corona precautions at home.</string>

    <string name="negativeTitle02">Watch for warning signs</string>
    <string name="negativeTitle03">Help cover basic needs</string>

    <string name="negativeDetail01">Help the person who is sick follow their doctor’s instructions for care and medicine. For most people, symptoms last a few days, and people usually feel better after a week.</string>
    <string name="negativeDetail02">See if over-the-counter medicines for fever help the person feel better.</string>
    <string name="negativeDetail03">Make sure the person who is sick drinks a lot of fluids and rests.</string>
    <string name="negativeDetail04">Help them with grocery shopping, filling prescriptions, and getting other items they may need. Consider having the items delivered through a delivery service, if possible.</string>
    <string name="negativeDetail05">Have their doctor’s phone number on hand. Use CDC’s self-checker tool to help you make decisions about seeking appropriate medical care. Call their doctor if the person keeps getting sicker. For medical emergencies, call 911 and tell the dispatcher that the person has or might have COVID-19.</string>


    <string name="helpDescription">Ask help from your community. You can either ask for food or money. People are most likely to receive help within 4 days.</string>
    <string name="verification">A verification code has been send to your given email. Please enter the code below to verify the email</string>


    <string name="nodataDetails">Your corona result is not available in our database. If you have tested covid-19 wait for the data to be updated.</string>


    <string-array name="help_reasons">
        <item>Physical disability</item>
        <item>Loss of job</item>
        <item>Medical complexity</item>
        <item>Diseased family member</item>
    </string-array>

    <string-array name="help_condition">
        <item>0 - 500 BDT</item>
        <item>500 - 1000 BDT</item>
        <item>1000 - 2000 BDT</item>
        <item>2000 - 3000 BDT</item>
        <item>3000 - 5000 BDT</item>
        <item>More than 5000 BDT</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maps_page_not_created">maps page not created</string>
    <string name="title_activity_new_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>