<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoronaNegative">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">'


                <TextView
                    android:gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/bold"
                    android:text="Negative"
                    android:layout_marginTop="40dp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:textColor="#00A825"
                    android:layout_height="40dp"
                    android:textSize="24sp"
                    android:layout_marginBottom="40dp"
                    />

                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/negativeTitle"
                    android:layout_width="match_parent"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginBottom="16dp"
                    />


                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/negativeTitle03"
                    android:layout_width="match_parent"
                    android:textColor="@color/darkLight"
                    android:layout_height="wrap_content"
                    android:textSize="24dp"
                    android:layout_marginBottom="8dp"
                    />


                <TextView
                    android:layout_marginLeft="16dp"
                    android:paddingRight="40dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/negativeDetail01"
                    android:layout_width="match_parent"
                    android:textColor="@color/darkLight"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginBottom="16dp"
                    />

                <TextView
                    android:layout_marginLeft="16dp"
                    android:paddingRight="40dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/negativeDetail02"
                    android:layout_width="match_parent"
                    android:textColor="@color/darkLight"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginBottom="16dp"
                    />
                <TextView
                    android:layout_marginLeft="16dp"
                    android:paddingRight="40dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/negativeDetail03"
                    android:layout_width="match_parent"
                    android:textColor="@color/darkLight"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginBottom="16dp"
                    />
                <TextView
                    android:layout_marginLeft="16dp"
                    android:paddingRight="40dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/negativeDetail04"
                    android:layout_width="match_parent"
                    android:textColor="@color/darkLight"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginBottom="16dp"
                    />

                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/negativeTitle02"
                    android:layout_width="match_parent"
                    android:textColor="@color/darkLight"
                    android:layout_height="wrap_content"
                    android:textSize="24dp"
                    android:layout_marginBottom="8dp"
                    />

                <TextView
                    android:layout_marginLeft="16dp"
                    android:paddingRight="40dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/negativeDetail05"
                    android:layout_width="match_parent"
                    android:textColor="@color/darkLight"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginBottom="16dp"
                    />

            </LinearLayout>
        </ScrollView>
</FrameLayout>